--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello </title>
 </head>
 <body>
-    <h1>Hello Djamil dd hhh</h1>
+
+<h1>Hello Djamil testss</h1>
+    <span th:text="${#local.country}">US</span>
 </body>
 </html>
